# emotion

./: LICENSE  README.md  pyproject.toml
checkemotion/: __init__.py
checkemotion/analysis/: __init__.py  call_graph.py  metrics.py  narrator.py
checkemotion/core/: __init__.py  analyzer.py  decorator.py  profiler.py  registry.py
checkemotion/output/: __init__.py  conversation.py  dashboard.py  logger.py
checkemotion/schemas/: __init__.py  emotions.py
checkemotion/utils/: __init__.py  ansi.py  ast_helpers.py  dialogue_data.py  emotion_lookup.py
examples/: quickstart.py
