[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name            = "checkemotion"
version         = "0.2.2"
description     = "Assign emotional personalities to Python functions via AST + runtime analysis"
readme          = "README.md"
requires-python = ">=3.11"
license         = { text = "MIT" }
keywords        = ["emotions", "ast", "profiling", "debugging", "observability"]

# Zero mandatory dependencies — pure stdlib.
# Optional: install ollama locally for LLM-powered function descriptions.
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.hatch.build.targets.wheel]
packages = ["checkemotion"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "build>=1.4.0",
    "twine>=6.2.0",
]
